manifest/docmost.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: docmost
  namespace: docmost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docmost
  template:
    metadata:
      labels:
        app: docmost
    spec:
      volumes:
        - name: docmost-data
          persistentVolumeClaim:
            claimName: docmost-pvc
      containers:
        - name: docmost
          ports:
            - containerPort: 3000
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: docmost-data
              mountPath: /app/data/storage
          image: 'docmost/docmost:latest'
      securityContext:
        runAsUser: 0
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis
  namespace: docmost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
      containers:
        - name: redis
          image: 'redis:7.2-alpine'
          resources: {}
          volumeMounts:
            - name: redis-data
              mountPath: /data
      securityContext:
        runAsUser: 0
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: db
  namespace: docmost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
        - name: postgres
          image: 'postgres:16-alpine'
          resources: {}
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      securityContext:
        runAsUser: 0
